# verdictmesh

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: collector-api.md  collector-audit.md  collector-ci-check.md  collector-ci-final.md  collector-ci-real-last.md  collector-ci-ultimate-2.md  collector-ci-ultimate-3.md  collector-ci-ultimate-4.md  collector-ci-ultimate.md  collector-config.md  collector-final.md  collector-index.md  collector-note.md  collector-pr-note.md  collector-quickstart.md  collector-roadmap.md  collector-status.md  collector-stop.md  collector-troubleshooting.md  collector-usage.md  collector-verification.md  do-not-create-more.md  evidence.md  source-pipeline.md
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_order_book_history.py  0003_forecast_runs.py  0004_evidence_packages.py
src/verdictmesh/: __init__.py  anthropic_client.py  api.py  backtest.py  clob.py  config.py  database.py  domain.py  evidence.py  evidence_models.py  evidence_store.py  forecast.py  forecast_models.py  forecast_store.py  gdelt.py  history.py  market_data.py  paper.py  risk.py  service.py
tests/: test_anthropic_client.py  test_backtest.py  test_clob.py  test_database.py  test_evidence.py  test_evidence_store.py  test_forecast.py  test_forecast_store.py  test_gdelt.py  test_history.py  test_market_data.py  test_paper.py  test_risk.py
